--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "axios": "^1.12.2",
+    "file-saver": "^2.0.5",
     "html5-qrcode": "^2.3.8",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.263.1",
@@ -17,7 +19,8 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.5.0",
     "typescript": "^4.9.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
