--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@tauri-apps/cli": "^2.8.4",
     "@types/react-router-dom": "^5.3.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "tailwindcss": "^3.2.0"
+    "tailwindcss": "^3.2.0",
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
