--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@types/file-saver": "^2.0.7",
-    "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "axios": "^1.12.2",
+    "class-variance-authority": "^0.7.1",
     "file-saver": "^2.0.5",
     "html5-qrcode": "^2.3.8",
     "lottie-react": "^2.4.1",
@@ -21,6 +23,7 @@
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.5.0",
+    "tailwind-merge": "^3.4.0",
     "typescript": "^4.9.0",
     "web-vitals": "^2.1.0",
     "xlsx": "^0.18.5"
@@ -28,6 +31,7 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "@tauri-apps/cli": "^2.8.4",
+    "@types/node": "^24.10.1",
     "@types/react-router-dom": "^5.3.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
