--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "@types/node": "^24.10.1",
     "@types/react-router-dom": "^5.3.0",
     "autoprefixer": "^10.4.0",
+    "baseline-browser-mapping": "^2.10.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.2.0",
     "workbox-webpack-plugin": "^7.3.0"
   },
   "scripts": {
-    "start": "PORT=3000 react-scripts start",
+    "start": "PORT=3000 NODE_OPTIONS=--no-deprecation react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
